Подготовка Базы Данных

--- a/ApplicationDDD.DAL.SqlLite/ApplicationDDD.DAL.SqlLite.csproj
+++ b/ApplicationDDD.DAL.SqlLite/ApplicationDDD.DAL.SqlLite.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AplicationDDD.Domain.Base\AplicationDDD.Domain.Base.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data\AplicationDDD.DAL\AplicationDDD.DAL.csproj" />
   </ItemGroup>
 
 </Project>
