--- a/Services/AplicationDDD.WebApi/appsettings.json
+++ b/Services/AplicationDDD.WebApi/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DataBase": "SqlLite",
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AplicationDDD-db;",
+    "SqlLite": "Data Source=ApDDD.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
