--- a/Common/AplicationDDD.Domain.Base/AplicationDDD.Domain.Base.csproj
+++ b/Common/AplicationDDD.Domain.Base/AplicationDDD.Domain.Base.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\AplicationDDD.Interfaces.Base\AplicationDDD.Interfaces.Base.csproj" />
+  </ItemGroup>
 
 </Project>
