--- a/Services/AplicationDDD.WebApi/AplicationDDD.WebApi.csproj
+++ b/Services/AplicationDDD.WebApi/AplicationDDD.WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ApplicationDDD.DAL.SqlLite\ApplicationDDD.DAL.SqlLite.csproj" />
+    <ProjectReference Include="..\..\Data\AplicationDDD.DAL.MsQLServer\AplicationDDD.DAL.MsQLServer.csproj" />
+    <ProjectReference Include="..\..\Data\AplicationDDD.DAL\AplicationDDD.DAL.csproj" />
+    <ProjectReference Include="..\AplicationDDD.Services\AplicationDDD.Services.csproj" />
   </ItemGroup>
 
 </Project>
