--- a/Tests/AplicationDDD.TestConsole/AplicationDDD.TestConsole.csproj
+++ b/Tests/AplicationDDD.TestConsole/AplicationDDD.TestConsole.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,5 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\AplicationDDD.Services\AplicationDDD.Services.csproj" />
+    <ProjectReference Include="..\..\Services\AplicationDDD.WebApe.Client\AplicationDDD.WebApe.Client.csproj" />
+  </ItemGroup>
 
 </Project>
