--- a/UI/AplicationDDD.MVC/AplicationDDD.MVC.csproj
+++ b/UI/AplicationDDD.MVC/AplicationDDD.MVC.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\AplicationDDD.Interfaces\AplicationDDD.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Services\AplicationDDD.WebApe.Client\AplicationDDD.WebApe.Client.csproj" />
+  </ItemGroup>
+
 </Project>
