--- a/UI/AplicationDDD.WPF/AplicationDDD.WPF.csproj
+++ b/UI/AplicationDDD.WPF/AplicationDDD.WPF.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Services\AplicationDDD.WebApe.Client\AplicationDDD.WebApe.Client.csproj" />
+  </ItemGroup>
+
 </Project>
