--- a/Services/AplicationDDD.WebApi/appsettings.json
+++ b/Services/AplicationDDD.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DataBase": "SqlLite",
+  "DataBase": "SqlServer",
   "ConnectionStrings": {
     "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AplicationDDD-db;",
     "SqlLite": "Data Source=ApDDD.db"
