--- a/UI/AplicationDDD.MVC/appsettings.json
+++ b/UI/AplicationDDD.MVC/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebApi": "https://localhost:7182/"
 }
