--- a/Services/AplicationDDD.WebApi/appsettings.json
+++ b/Services/AplicationDDD.WebApi/appsettings.json
@@ -2,6 +2,7 @@
   "DataBase": "SqlServer",
   "ConnectionStrings": {
     "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AplicationDDD-db;",
+    "DockerDb": "Server=db;Database=AplicationDDD-db;User=SA;Password=yourStrong1_2Password",
     "SqlLite": "Data Source=ApDDD.db"
   },
   "Logging": {
